--- a/01.Variables/00_material.html
+++ b/01.Variables/00_material.html
@@ -15,11 +15,11 @@
                 console.log(text)
             }
 
-            // CONST CAN'T CHANGE THE VALUE
-            const name = 'Cristina';
+            // CONST NO PUEDE CAMBIAR SU VALOR
+            const name = 'Jacobo';
             console.log(name)
 
-            // LET/VAR CAN CHANGE THE VALUE
+            // LET/VAR PUEDEN CAMBIAR DE VALOR
             let text = 'Text';
             var whatever = 'Whatever';
             console.log(whatever)
