--- a/01.Variables/00_material.html
+++ b/01.Variables/00_material.html
@@ -21,6 +21,7 @@
 
             // LET/VAR PUEDEN CAMBIAR DE VALOR
             let text = 'Text';
+            // VAR se pueden definir después de ser utilizadas
             var whatever = 'Whatever';
             console.log(whatever)
             console.log(text)
